2008-03-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.cpp, itpp/base/mat.h: Add in_range(r,c),
	col_in_range(c) and row_in_range(r) inline methods

	This is a pure clean-up patch which simplifies it_assert_debug()
	checks. BTW, it also includes a few cosmetic changes to other
	assertion checks.

	* itpp/base/mat.cpp, itpp/base/mat.h: Make consistent naming of
	variables used in the Mat class interface

	This patch unifies the variable names in the Mat class interface.
	The following names are now commonly used:
	- m, m1, m2, etc.: matrix
	- v: vector
	- t: simple numeric type Num_T, e.g. bin, int, double
	- r, r1, r2: row index
	- c, c1, c2: column index
	- i: generic index

	* itpp/base/mat.cpp, itpp/base/mat.h: Clean-up redundant use of
	"const" keyword in the Mat class

	There is no need for declaring the returned by value types with an
	additional "const" keyword. Moreover, Num_T is assumed a simple or
	built in type for the Mat class, i.e. bin, short int, int, double
	and complex<double>. Therefore it might be more efficient to pass
	arguments of this type by value, in which case the "const" keyword
	is also redundant.

	* itpp/base/vec.h: Deprecate elem_div(t,v) function of the Vec
	class

	This function is only an alias to operator/(t,v). Besides, no
	similar methods for operator/(v,t), operator*(t,v) and
	operator*(v,t) exist.

	* itpp/comm/modulator.h, tests/modulator_test.cpp,
	tests/modulator_test.ref: Fix bug [1908644] in
	Modulator<>::set(symbols, bits2symbols) function

	The bitmap matrix used in the demodulate_bits() function of the
	Modulator<> base class was improperly constructed from the input
	bits2symbols mapping vector. This resulted in demodulation errors
	for some constellations, e.g. 64-QAM or 8-PSK. This patch fixes
	this problem.

	Thanks to Yann Cocheril for reporting this problem.

2008-03-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/llr.cpp, itpp/comm/llr.h: In case of an overflow