@@ -111,7 +111,7 @@ D.swap_cols(0, 3); D =
 [[1 1 1 1]
  [1 1 1 1]
  [1 1 1 0]]
-D.set_submatrix(1,2,2,3, A(0,1,0,1); D =
+D.set_submatrix(1,2, A(0,1,0,1); D =
 [[1 1 1 1]
  [1 1 0 0]
  [1 1 1 1]]
@@ -405,7 +405,7 @@ D.swap_cols(0, 3); D =
 [[5 4 5 2]
  [5 4 5 2]
  [1 5 1 2]]
-D.set_submatrix(1,2,2,3, A(0,1,0,1); D =
+D.set_submatrix(1,2, A(0,1,0,1); D =
 [[5 4 5 2]
  [5 4 1 2]
  [1 5 3 9]]
@@ -699,7 +699,7 @@ D.swap_cols(0, 3); D =
 [[-1.0607 -0.0744 -1.0607 0.9243]
  [-1.0607 -0.0744 -1.0607 0.9243]
  [-0.7612 0.7938 -0.7612 -1.3342]]
-D.set_submatrix(1,2,2,3, A(0,1,0,1); D =
+D.set_submatrix(1,2, A(0,1,0,1); D =
 [[-1.0607 -0.0744 -1.0607 0.9243]
  [-1.0607 -0.0744 -0.6124 1.2957]
  [-0.7612 0.7938 1.4815 -0.2982]]
@@ -993,7 +993,7 @@ D.swap_cols(0, 3); D =
 [[-0.1766+1.2697i -0.2941-0.7994i -0.1766+1.2697i -0.2915+0.7803i]
  [-0.1766+1.2697i -0.2941-0.7994i -0.1766+1.2697i -0.2915+0.7803i]
  [0.0682-0.9952i -0.6854-0.4138i 0.0682-0.9952i -0.5883+1.1873i]]
-D.set_submatrix(1,2,2,3, A(0,1,0,1); D =
+D.set_submatrix(1,2, A(0,1,0,1); D =
 [[-0.1766+1.2697i -0.2941-0.7994i -0.1766+1.2697i -0.2915+0.7803i]
  [-0.1766+1.2697i -0.2941-0.7994i -0.1478-0.2132i -0.6752-0.0387i]
  [0.0682-0.9952i -0.6854-0.4138i -0.1693-0.4322i -0.7615+1.6166i]]
